deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-app
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gitlab-app
  template:
    metadata:
      labels:
        app: gitlab-app
    spec:
      containers:
        - image: gitlab/gitlab-ee:18.7.5-ee.0
          name: gitlab-app
          ports:
            - containerPort: 80
