svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42-playground
spec:
  ports:
  - port: 8086
    targetPort: 80
  selector:
    app: wil42-playground
