ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-playground
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: wil42-playground
                port:
                  number: 81
